# sigrok

./: .gitignore  HACKING  Makefile.am  README  autogen.sh  configure.ac
backend/: Makefile.am  analyzer.h  backend.c  backend.h  datastore.c  datastore.h  debug.c  debug.h  device.c  device.h  filter.c  hwplugin.c  hwplugin.h  session.c  session.h
backend/output/: output_text.c
cli/: Makefile.am  anykey.c  configure.ac  parsers.c  sigrok-cli.c  sigrok-cli.h
contrib/: Makefile.am  gnuplot_chronovu_la8.gpi  gnuplot_usbeesx.gpi  z60_flosslogic.rules  z60_sigrok.rules
contrib/nsis/: Makefile.am  sigrok.nsi  sigrok.nsi.in
decode/: Makefile.am  decode.c  sigrokdecode.h
decode/scripts/: transitioncounter.py
doc/: Makefile.am  saleae-logic.txt  sigrok-cli.1  sigrok-gui.1
frontend/: Makefile.am
frontend/cli/: Makefile.am  sigrok-cli.c
frontend/gui/: .gitignore  channelform.cpp  channelform.h  channelform.ui  channelrenderarea.cpp  channelrenderarea.h  configform.h  configform.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sampleiodevice.cpp  sampleiodevice.h  sigrok-gui.pro  sigrok-gui.qrc  sigrok-gui.rc
frontend/gui/icons/: sigrok-gui.icns
frontend/gui/locale/: sigrok-gui_de_DE.ts
gtk/: Makefile.am  README  autogen.sh  configure.ac  devselect.c  gtkcellrenderersignal.c  help.c  log.c  main.c  sigrok-gtk.h  sigview.c  sigview.h  toolbar.c
gui/: channelform.cpp  channelform.h  channelform.ui  configform.cpp  decodersform.cpp  decodersform.h  decodersform.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sampleiodevice.cpp  sampleiodevice.h  sigrok-gui.pro  sigrok-gui.pro.in
gui/locale/: sigrok-gui_de_DE.ts  sigrok-gui_nl_NL.ts
hardware/: Makefile.am
hardware/common/: Makefile.am  ezusb.c  ezusb.h  hwcommon.h  serial.c  skeleton.c
hardware/openbench-logic-sniffer/: Makefile.am  ols.c
hardware/saleae-logic/: Makefile.am  saleae-logic.c
hardware/zeroplus-logic-cube/: Makefile.am  analyzer.c  analyzer.h  zeroplus.c
include/: Makefile.am  sigrok.h
libsigrokfile/: Doxyfile  Makefile.am  configure.ac  libsigrokfile.pc.in  log.c  main.c  sigrokfile-internal.h  sigrokfile.h
libsigrokfile/output/: Makefile.am
sigrok-gtk/: .gitignore  Makefile.am  README  autogen.sh  configure.ac  devselect.c  gtkcellrenderersignal.c  gtkcellrenderersignal.h  help.c  icons.c  log.c  main.c  sigrok-gtk.h  sigview.c  toolbar.c
sigrok-gtk/contrib/: Makefile.am  sigrok-gtk.nsi.in
sigrok-gtk/doc/: Makefile.am  sigrok-gtk.1
sigrok-qt/: .gitignore  README  channelform.h  channelform.ui  configform.h  decodersform.cpp  decodersform.h  decoderstackform.cpp  decoderstackform.h  decoderstackform.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sampleiodevice.cpp  sampleiodevice.h  sigrok-qt.pro
sigrok-qt/contrib/: sigrok-qt.nsi
sigrok-qt/doc/: sigrok-qt.1
sigrok-qt/locale/: sigrok-gui_fr_FR.ts  sigrok-gui_nl_NL.ts  sigrok-qt_de_DE.ts  sigrok-qt_fr_FR.ts  sigrok-qt_nl_NL.ts
